# bevy-space-sim

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
assets/models/: artillery_platform.glb  infiltrator.glb  praetor.glb  spaceship_v1.glb  turret.glb
assets/textures/: background_astc.ktx2
src/: aiming.rs  collider_setup.rs  drone.rs  gun.rs  lifetime.rs  main.rs  player.rs  projectile.rs  scene_setup.rs  skybox.rs  turret.rs  weapon.rs
