[package]
name = "bevy-space-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8", features = ["dynamic"] }
bevy_rapier3d = { version = "0.16", features = [ "simd-stable", "debug-render" ] }
bevy_hanabi = "0.3"
bevy-inspector-egui = "0.13"
rand = "0.8"
