[package]
name = "bevy-space-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable max optimizations for dependencies, making debug build mach faster
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic", "ktx2", "zstd"] }
bevy_rapier3d = { version = "0.19.0", features = [ "simd-stable", "debug-render" ] }
bevy_hanabi = "0.5.1"
bevy-inspector-egui = "0.15.0"
rand = "0.8.5"
